# fakturant

./: .env.example  .gitignore  AUTH.md  CLAUDE.md  DEPLOYMENT.md  INVOICE_LIFECYCLE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  auth.py  config.py  main.py  models.py  pyproject.toml  start_dev.sh
backend/services/: ares.py  db.py  email.py  qr.py  queries.py
backend/templates/: forgot_password.html  invoice_classic.html  invoice_minimal.html  invoice_modern.html  login.html  reset_password.html  signup.html  verify_email_done.html  verify_email_sent.html
backend/tests/: conftest.py  test_api_routes.py  test_ares.py  test_dashboard_data.py  test_e2e_remote.py  test_email_verification.py  test_invoicing_features.py  test_password_reset.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: app.css  app.js  ares.js  csv_import.js  dashboard.js
scripts/: BACKUP.md  backup.sh  restore.sh  run-e2e.sh
