[project]
name = "fakturant-backend"
version = "0.4.0"
description = "Czech invoice generator — FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "httpx>=0.27",
    "weasyprint>=62.3",
    "segno>=1.6.6",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.23.1",
    "pytest-playwright>=0.5",
]
